--- a/untitled folder/chat_gpt/pubspec.yaml
+++ b/untitled folder/chat_gpt/pubspec.yaml
@@ -35,9 +35,10 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
-  flutter_svg: ^2.0.9
+  
   carousel_slider: ^4.2.1
   iconsax: ^0.0.8
+  country_code_picker: ^3.0.0
 
 dev_dependencies:
   flutter_test:
